--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     }
   ],
   "require": {
-    "php" : "~7.1"
+    "php" : "~5.6",
+    "paragonie/random_compat": "^1|^2"
   },
   "suggest": {
     "phpmailer/phpmailer": "Recommended transport"
