--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "php" : "~7.1"
+    "php" : "^7.1|^8.0"
   },
   "suggest": {
     "phpmailer/phpmailer": "Recommended transport"
