--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,20 @@
   "require": {
     "php" : "^7.1|^8.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  },
   "suggest": {
     "phpmailer/phpmailer": "Recommended transport"
   },
   "autoload": {
     "psr-4": {
       "AllenJB\\Mailer\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "AllenJB\\Mailer\\Tests\\": "tests"
     }
   }
 }
