--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "php" : "^7.1|^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "phpmailer/phpmailer": "^6.5"
   },
   "suggest": {
     "phpmailer/phpmailer": "Recommended transport"
