--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,3 +18,18 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           coverage: pcov
           tools: phpunit
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+            path: ${{ steps.composer-cache.outputs.dir }}
+            # Use composer.json for key, if composer.lock is not committed.
+            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+            # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+            restore-keys: ${{ runner.os }}-composer-
+      - name: Install dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Test with phpunit
+        run: vendor/bin/phpunit --coverage-text
