--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,14 @@
     }
   ],
   "require": {
-    "php" : "^7.1|^8.0"
+    "php" : "^7.3|^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "phpmailer/phpmailer": "^6.5"
+    "phpmailer/phpmailer": "^6.5",
+    "phpstan/phpstan": "^0.12",
+    "phpstan/phpstan-strict-rules": "^0.12",
+    "slam/phpstan-extensions": "^5.1"
   },
   "suggest": {
     "phpmailer/phpmailer": "Recommended transport"
