Add PHPStan to Actions Workflow: * Allow an earlier version of slam/phpstan-extensions for PHP 7.3; * Fix converted character causing PHPStan run to fail

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Install dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
       - name: Run static analysis with phpstan
-        run: vendor/bin/phpstan analyze —configuration=phpstan.neon
+        run: vendor/bin/phpstan analyze --configuration=phpstan.neon
