--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,24 @@
       "role": "Developer"
     }
   ],
+  "config" : {
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  },
   "require": {
-    "php" : "^7.3|^8.0"
+    "php" : "^8.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
+    "dealerdirect/phpcodesniffer-composer-installer": "^1.2",
+    "phpcompatibility/php-compatibility": "^10.0.0@dev",
     "phpmailer/phpmailer": "^6.5",
-    "phpstan/phpstan": "^0.12",
-    "phpstan/phpstan-strict-rules": "^0.12",
-    "slam/phpstan-extensions": "^5.0.2"
+    "phpstan/phpstan": "^2.1",
+    "phpstan/phpstan-strict-rules": "^2.0",
+    "phpunit/phpunit": "^9.5",
+    "slam/phpstan-extensions": "^6.4",
+    "squizlabs/php_codesniffer": "^4.0"
   },
   "suggest": {
     "phpmailer/phpmailer": "Recommended transport"
